# simple-deploy-render-django

./: .gitignore  db.sqlite3  pyproject.toml  requirements.txt
core/: settings.py  urls.py
penv/: pyproject.toml
run/: build.sh
staticfiles/: staticfiles.json
