[tool.poetry]
name = "core"
version = "0.1.0"
description = ""
authors = ["Matish"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
asgiref = "3.6.0"
brotli = "1.0.9"
dj-database-url = "1.3.0"
django = "4.2"
django-environ = "0.10.0"
gunicorn = "20.1.0"
psycopg2-binary = "2.9.6"
sqlparse = "0.4.3"
typing-extensions = "4.5.0"
tzdata = "2023.3"
whitenoise = "6.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
